--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top mb-3">
   <div class="container-fluid">
+
+    <a title="Home" href="index.html"><i class="navBtn bi bi-house-door-fill"></i></a>
+
+    <a title="Arcade" href="arcade.html" type="button"><i class="navBtn bi bi-dpad"></i></a>
     
     <a class="navbar-brand" href="index.html">Store Name</a>
 
@@ -23,8 +27,6 @@
             <input id="searchInput" name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
             <button id="searchBtn" title="Search" class="searchBtn btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
         </form>
-
-    <a title="Cart" href="cart.html" type="button"><i class="cart bi bi-cart4 position-relative"></i><span id="cartBadge" class="top-0 start-100 translate-middle badge rounded-pill bg-danger"></span></a>
 
       </div>
     </div>
@@ -114,7 +116,6 @@
                         <p class="text-muted mb-2">Reiki infused water.</p>
 
                         <p class="fw-bold mb-1">$24.99</p>
-                        <p id="stock-chakraWater" class="text-muted small mb-3"></p>
                     </div>
                 </div>
             </div>
@@ -134,7 +135,6 @@
                         <p class="text-muted mb-2">Hand-poured protection spell candle.</p>
 
                         <p class="fw-bold mb-1">$12.99</p>
-                        <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,6 @@
                         <p class="text-muted mb-2">Hand-poured protection spell candle.</p>
 
                         <p class="fw-bold mb-1">$12.99</p>
-                        <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
                     </div>
                 </div>
             </div>
@@ -172,11 +171,11 @@
                         <p class="text-muted mb-2">Hand-poured protection spell candle.</p>
 
                         <p class="fw-bold mb-1">$12.99</p>
-                        <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
                       </div>
                     </div>
               </div>
 
+              <!-- Arcade Carousel -->
             <div class="col-12 col-md-3 mb-3">
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
