--- a/art.html
+++ b/art.html
@@ -19,8 +19,10 @@
 <body>
 
   <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top mb-3">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
+
+    <a title="Home" href="index.html"><i class="navBtn bi bi-house-door"></i></a>
     
     <a class="navbar-brand" href="index.html">Store Name</a>
 
@@ -29,12 +31,23 @@
             <button id="searchBtn" title="Search" class="searchBtn btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
         </form>
 
-    <a title="Cart" href="cart.html" type="button"><i class="cart bi bi-cart4 position-relative"></i><span id="cartBadge" class="top-0 start-100 translate-middle badge rounded-pill bg-danger"></span></a>
-
       </div>
     </div>
     </div>
     </nav>
+
+    <!-- Tabs -->
+    <ul class="nav nav-tabs mb-3">
+      <li class="nav-item">
+        <a class="nav-link" href="arcade.html">Arcade</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="art.html">Art</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="new-age.html">New Age</a>
+      </li>
+    </ul>
 
   <!-- HERO BANNER -->
   <section class="container mb-4">
