--- a/new-age.html
+++ b/new-age.html
@@ -18,28 +18,36 @@
 
 <body>
 
-  <!-- NAVBAR (matches index.html exactly) -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top mb-3">
-    <div class="container">
-      
-      <a class="navbar-brand" href="index.html">Store Name</a>
+  <!-- NavBar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+  <div class="container-fluid">
 
-      <!-- Search bar -->
-      <form class="searchBar d-flex mt-3" role="search" action="search.html" method="GET">
-        <input id="searchInput" name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        <button id="searchBtn" title="Search" class="searchBtn btn btn-outline-success" type="submit">
-          <i class="bi bi-search"></i>
-        </button>
-      </form>
+    <a title="Home" href="index.html"><i class="navBtn bi bi-house-door"></i></a>
+    
+    <a class="navbar-brand" href="index.html">Store Name</a>
 
-      <!-- Cart -->
-      <a title="Cart" href="cart.html" type="button">
-        <i class="cart bi bi-cart4 position-relative"></i>
-        <span id="cartBadge" class="top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
-      </a>
+    <form class="searchBar d-flex mt-3" role="search" action="search.html" method="GET">
+            <input id="searchInput" name="q" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <button id="searchBtn" title="Search" class="searchBtn btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+        </form>
 
+      </div>
     </div>
-  </nav>
+    </div>
+    </nav>
+
+    <!-- Tabs -->
+    <ul class="nav nav-tabs mb-3">
+      <li class="nav-item">
+        <a class="nav-link" href="arcade.html">Arcade</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="art.html">Art</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="new-age.html">New Age</a>
+      </li>
+    </ul>
 
   <!-- ============================= -->
   <!-- TOP BANNER ROW (matches index) -->
