--- a/arcade.html
+++ b/arcade.html
@@ -88,15 +88,15 @@
               </div>
             </div>
 
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-3 mb-3">
                 <a href="zombie-game.html"><img class="game-img" src="zombie-game.png" alt="Car Game"></a>
             </div>
 
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-3 mb-3">
                 <a href="last-credit-game.html"><img class="game-img" src="last-credit.png" alt="Horror Game"></a>
             </div>
 
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-3 mb-3">
                 <a href="car-game.html"><img class="game-img" src="car-game.png" alt="Car Game"></a>
             </div>
 
